fix overflow-y

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,7 +11,6 @@ body {
   margin: 0;
   background-color: #48355b;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 body::after {
